<resources>
    <string name="app_name">Contacts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登陆</string>
    <string name="find_password">找回密码</string>
    <string name="sign_up">注册账号</string>
    <string name="title_activity_login">LoginActivity</string>
<string name="ac_number">用户名/邮箱/手机号</string>
    <string name="ac_password">密码</string>
    <string name="action_search">搜索</string>
    <string name="action_addnew">添加</string>
    <string name="action_settings">Settings</string>
</resources>
