<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="#dde1ee"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="20dp"
        android:id="@+id/textView" />
    <!--//设置圆角，配置背景，想想如何利用这个方法给EditText设置边框，为ListView的每一个Item设置边框-->
    <ImageView
        android:id="@+id/myImage"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_marginTop="70dip"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_fillet_shape"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="账号"
        android:layout_marginRight="0dp"
        android:textSize="8pt"
        android:layout_alignBottom="@+id/loginListIndicator"
        android:layout_toStartOf="@+id/LoginButton"
        android:id="@+id/textView4" />
    <!--qq号-->
    <EditText
        android:id="@+id/loginNum"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="15dip"
        android:paddingLeft="50dip"
        android:hint="@string/ac_number"
        android:layout_below="@id/myImage"
        android:inputType="text"
        android:background="@drawable/login_num_edit" />
    <!--输入框-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="密码"
        android:layout_marginRight="0dip"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/textView4" />
    <!--qq密码框-->
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:paddingLeft="50dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="30dip"
        android:hint="@string/ac_password"
        android:inputType="textPassword"
        android:layout_below="@+id/loginNum"
        android:background="@drawable/login_num_edit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textColor="@android:color/darker_gray"
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_alignTop="@+id/loginPassword"
        android:layout_marginTop="9dip"
        android:layout_marginLeft="3dip"
        android:id="@+id/textView3" />

    <ImageButton
        android:id="@+id/loginListIndicator"
        android:layout_width="22dip"
        android:layout_height="20dip"
        android:layout_marginBottom="8dip"
        android:layout_marginRight="3dip"
        android:layout_alignBottom="@+id/loginNum"
        android:layout_alignRight="@+id/loginNum"
        android:background="@drawable/indicator_down"
        />
    <!--为什么又有一个账号的申请，因为删除了？-->
    <ImageButton
        android:id="@+id/delete_button_edit"
        android:layout_width="18dip"
        android:layout_height="18dip"
        android:layout_marginBottom="8dip"
        android:layout_marginRight="3dip"
        android:layout_alignBottom="@+id/loginNum"
        android:layout_toLeftOf="@id/loginListIndicator"
        android:background="@drawable/delete_button_edit"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="-15dp"
        android:background="@drawable/login_button_back"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_below="@+id/loginPassword"
        android:layout_alignStart="@+id/loginPassword" />


    <TextView
        android:id="@+id/fetchPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LoginButton"
        android:layout_marginLeft="45dip"
        android:text="@string/find_password"
        android:textSize="7pt"
        android:textColor="#333355"
        android:gravity="bottom"
        />

    <TextView
        android:id="@+id/regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dip"
        android:layout_marginTop="5dip"
        android:text="@string/sign_up"
        android:textSize="7pt"
        android:textColor="#333355"
        android:gravity="bottom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="7pt"
        android:gravity="bottom"
        android:layout_below="@+id/myImage"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/loginList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/regist"
        android:layout_alignLeft="@id/loginNum"
        android:layout_alignRight="@id/loginNum"
        android:layout_below="@id/loginNum"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        android:divider="#aaaaaa"
        android:dividerHeight="0px"
        />

</RelativeLayout>
